TIKA-4583: Introduce Ignite-based ConfigStore with JSON configuration support